# NMRD

./: CMakeLists.txt  PARC.OUT  compilation.bat  compilationNMRD.bat  compilationNMRD_Qt.bat
data/CERM/: COE  MAT  cerm.out
data/GP/: COE  MAT  PAR.OUT  output
data/Prova_CERM_1/: COE  MAT  PAR.OUT  prova
data/Prova_CERM_1_mod/: COE  PAR.OUT  prova
data/esempio1_CERM/: COE  MAT
src/: DialogForm.cpp  DialogForm.h  Plot.cpp  Plot.h  WidgetForm.cpp  WidgetForm.h  maindialog.ui  mainwidget.ui  moc_DialogForm.cpp  moc_Plot.cpp  moc_WidgetForm.cpp  nmrd.f90  nmrd_subroutineC.cpp  nmrd_subroutineC_Qt.cpp  nmrd_subroutineF.f90  nmrd_subroutineF_new.f90  old_mainwidget.ui  plot.ui  printF.f  testC.cpp  testF.f  ui_maindialog.h  ui_mainwidget.h  ui_plot.h
