CMAKE_MINIMUM_REQUIRED (VERSION 2.6)
PROJECT (NMRD)

FIND_PACKAGE(Qt4 REQUIRED)
INCLUDE(${QT_USE_FILE})
ADD_DEFINITIONS(${QT_DEFINITIONS})

#SET (QT_USE_QTNETWORK TRUE)
#SET (QT_USE_QTXML TRUE)

SET( SRCS 
        src/nmrd_subroutineC_Qt.cpp 
		)
SET( HDRS
)
SET( UIS  
)
QT4_WRAP_UI( UI_HDRS ${UIS} )
QT4_WRAP_CPP( MOC_SRCS ${HDRS} )

INCLUDE_DIRECTORIES( ${CMAKE_BINARY_DIR} )

ADD_EXECUTABLE( NMRD ${SRCS} ${MOC_SRCS} ${UI_HDRS} )
TARGET_LINK_LIBRARIES( NMRD ${QT_LIBRARIES} ${QT_QTNETWORK_LIBRARIES} ${QT_QTXML_LIBRARIES} )
